--- a/css/haste.css
+++ b/css/haste.css
@@ -196,6 +196,7 @@ html {
 }
 
 .buff-icon {
+  display: none;
   width: 28px;
   height: 28px;
   border-radius: 7px;
@@ -303,8 +304,6 @@ html {
   transition: border-color 0.3s cubic-bezier(0.4, 0, 0.2, 1),
               box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   height: fit-content;
-  position: sticky;
-  top: 80px;
 }
 
 .result-card:hover {
